--- a/TwitterScraper.ipynb
+++ b/TwitterScraper.ipynb
@@ -131,10 +131,10 @@
     "#           CREATE VADER SENTIMENT ANALSIS VARIABLE\n",
     "#--------------------------------------------------------------------------------------------------------------------- \n",
     "# Variables that contains the user credentials to access Twitter API \n",
-    "CONSUMER_KEY = 'GwXA2Yi7UlZnYqIjXWfX6QiL6'\n",
-    "CONSUMER_SECRET = '1sSFQN3nAFN7W4XoMeZgGkbQRbblVlEnJCwH8qLYEBImtHnvsQ'\n",
-    "ACCESS_TOKEN = '284793426-rSUoWDbldYXfRUPSHmTLC1eqPrtR3H7uaGt6Iahb'\n",
-    "ACCESS_SECRET = 'FYVXamm0BZMIeZCfr4vGJgsJ0fyGn4Ea2ESuVPHq1aiFv'  \n",
+    "CONSUMER_KEY = 'ENTER YOUR KEY HERE'\n",
+    "CONSUMER_SECRET = 'ENTER YOUR KEY HERE'\n",
+    "ACCESS_TOKEN = 'ENTER YOUR KEY HERE-ENTER YOUR KEY HERE'\n",
+    "ACCESS_SECRET = 'ENTER YOUR KEY HERE'  \n",
     "\n",
     "# Setup tweepy to authenticate with Twitter credentials:\n",
     "auth = tweepy.OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
